fixing layout bug
issue with images getting to big on a screen larger than 19 in.

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,14 @@ p{
   width: 25%;
   margin-right: 30px;
   float: left;
+  max-width: 150px;
 }
 
 .WebDev-pic{
   width: 25%;
   margin-left: 30px;
   float: right;
+  max-width: 150px;
 }
 
 .skill-row{
